# DeveloperDiskImage

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
PersonalizedImages/: iOS_DDI-version.plist  iOS_DDI.dmg  tvOS_DDI-version.plist  tvOS_DDI.dmg  watchOS_DDI-version.plist
PersonalizedImages/Xcode_iOS_DDI_Personalized/: BuildManifest.plist  Image.dmg  Image.dmg.trustcache  version.plist
PersonalizedImages/Xcode_iOS_DDI_Personalized/Restore/: 022-15533-053.dmg  BuildManifest.plist  Restore.plist
developer_disk_image/: exceptions.py  repo.py
developer_disk_image.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_repo.py
