[project]
name = "developer_disk_image"
description = "Download DeveloperDiskImage ans Personalized images from GitHub"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["ios", "DeveloperDiskImage"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/DeveloperDiskImage"
"Bug Reports" = "https://github.com/doronz88/DeveloperDiskImage/issues"

[project.scripts]
developer_disk_image = "developer_disk_image.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "PersonalizedImages*", "DeveloperDiskImages*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "developer_disk_image._version.__version__" }

[tool.setuptools_scm]
version_file = "developer_disk_image/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
